REFACTOR: criação de variáveis de cores no base.css

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -3,4 +3,9 @@
     --input-back-color: #3a3a3ab5;
     --button-login-color: #99B898;
     --border-button-login-color: #505050;
+    --icon-login-color: #716f6f;
+    --text-butto-color: #000000;
+    --text-login-color: #ffffff;
+    --text-loading-color: #99B898;
+    --background-home-color: #1E1E1E;
   }
